// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component frames an empty reflection 1`] = `
<body>
  <div>
    <iframe
      class="test-mirror-frame"
      height="0"
      id="4fzzzxj"
      width="0"
    />
  </div>
</body>
`;

exports[`Component renders reflection with styles 1`] = `
<div>
  <div>
    <iframe
      class="mirrorFrame"
      height="0"
      id="4fzzzxj"
      width="0"
    />
  </div>
</div>
`;

exports[`Hook returns an empty reflection 1`] = `<Mirror />`;

exports[`Hook starts reflecting node 1`] = `
<Mirror
  className="test-mirror"
  reflect={<div />}
/>
`;
